<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".TranslatorActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="16sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/block_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <!-- отсюда -->
        <LinearLayout
            android:id="@+id/block_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_info"
                android:padding="16dp" />

<!--            android:visibility="gone"-->

            <Button
                android:id="@+id/btn_translate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/sea_blue"
                android:text="@string/translate" />
        </LinearLayout>

        <!-- Блок голосового ввода -->
        <LinearLayout
            android:id="@+id/block_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"

            app:layout_constraintBottom_toTopOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageButton
                android:id="@+id/btn_speak"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/hint_for_some_people"
                android:src="@drawable/microphone_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/voice_action" />
        </LinearLayout>

        <!-- Блок фото-ввода -->
        <LinearLayout
            android:id="@+id/block_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/photo_info"
                android:src="@drawable/camera_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/photo_action" />
        </LinearLayout>
    </LinearLayout>


    <!-- досюда -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block_result"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block_action">

        <!-- Результат перевода -->
        <!-- Кнопка "Озвучить" -->


        <TextView
            android:lineSpacingExtra="7dp"
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="#222"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.382" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_speak_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sea_blue"
            android:text="@string/voice_over"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_copy"
            app:layout_constraintTop_toBottomOf="@+id/result_text" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:backgroundTint="@color/sea_blue"

            android:text="@string/copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Кнопка "Назад" -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/sea_blue"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
